# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.17.0 (2020-08-26)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| `kn source list` output now has client custom GVK set as `{Group: client.knative.dev, Version: v1alpha1, Kind: SourceList}`
| https://github.com/knative/client/pull/980[#980]

| 🐛
| Fix client side volume name generation
| https://github.com/knative/client/pull/975[#975]

| 🐣
| Build test images for e2e tests, add `.ko.yaml` specifying base image
| https://github.com/knative/client/pull/974[#974]

| 🎁
| Add mock test client for dynamic client
| https://github.com/knative/client/pull/972[#972]

| 🐛
| Fix exit code for `kn service delete` and `kn revision delete` failures
| https://github.com/knative/client/pull/971[#971]

| 🎁
| Manage Knative Eventing channels
| https://github.com/knative/client/pull/967[#967]

| 🐣
| Allow the kn test image to be customized via environment variable
| https://github.com/knative/client/pull/957[#957]

| 🎁
| Fix Missing `NAMESPACE` column header for `kn source list -A`
| https://github.com/knative/client/pull/951[#951]

| 🐣
| List in-built source if CRD access is restricted
| https://github.com/knative/client/pull/948[#948]

| 🐣
| Separate PodSpecFlags from Service ConfigurationEditFlags
| https://github.com/knative/client/pull/943[#943]

| 🎁
| Add support to combine `kn service create --filename` with other options
| https://github.com/knative/client/pull/937[#937]

| 🎁
| Add support for internal plugins
| https://github.com/knative/client/pull/902[#902]
|===

## v0.16.1 (2020-08-25)

[cols="1,10,3", options="header", width="100%"]
|===