@@ -57,12 +57,15 @@ func NewServiceExportCommand(p *commands.KnParams) *cobra.Command {
 		Example: `
   # Export a service in YAML format
   kn service export foo -n bar -o yaml
+
   # Export a service in JSON format
   kn service export foo -n bar -o json
+
   # Export a service with revisions
-  kn service export foo --with-revisions --mode=resources -n bar -o json
+  kn service export foo --with-revisions --mode=export -n bar -o json
+
   # Export services in kubectl friendly format, as a list kind, one service item for each revision
-  kn service export foo --with-revisions --mode=kubernetes -n bar -o json`,
+  kn service export foo --with-revisions --mode=replay -n bar -o json`,
 		RunE: func(cmd *cobra.Command, args []string) error {
 			if len(args) != 1 {
 				return errors.New("'kn service export' requires name of the service as single argument")
